styles/main.css
* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    -ms-box-sizing: border-box;
    box-sizing: border-box;
}

body {
    margin: 0;
}

a {
    text-decoration: none;
    color: white
}

.nav-bar {
    display: flex;
    justify-content: space-between;
    background-color: #222222;
    height: 70px;
    top: 0;
    width: 100%;
    line-height: 70px;
    color: white;
    position: fixed;
}

.title {
    display: inline;
    padding-left: 25px;
}

.title:hover {
    color: #888;
}

.menu {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: #222;
}

li {
  float: left;
}

.menu-item {
  display: block;
  color: white;
  text-align: center;
  padding-right: 20px;
  padding-left: 20px;
  font-family: roboto;
}

.menu-item:hover {
  background-color: #111;
}

.active {
  background-color: #111;
}

.row {
    display: flex;
    width: 100%;
}
.column {
    margin: 0px 10px 0px 10px;
    text-align: center;
}

.face {
    height: 250px;
    width: 400px;
}

.bio {
    margin-top: 70px;
    padding-top: 25px;
    padding-bottom: 25px;
    height: 300px;
    display: flex;
}

.thumbnail {
    border-radius: 5px;
}

figcaption {
    text-align: left;
    margin-left: 25px;
}

.main {
    margin: 100px 70px 0px 70px;
    font-family: roboto;
}

.position {
    height: 400px;
    position: relative;
}
.desc {
    float: left;
    height: inherit;
    overflow: auto;
}
.example {
    position: relative;
    float: left;
    height: inherit;
}

#default-text{
    text-align: center;
    color: blue;
}

#white-text{
    text-align: center;
    color: white;
}

#rel1 {
    position: relative;
    z-index: 0;
    border-color: blue;
    border-style: dashed;
    width: 200px;
    height: 200px;
    float: left;
}

#rel2 {
    position: absolute;
    background-color: red;
    width: 200px;
    height: 200px;
    left: 90px;
    top: 70px;
    float: left;
}

#abs1 {
    position: absolute;
    background-color: blue;
    width: 100px;
    height: 100px;
    left: 0px;
    top: 0px;
}

#abs2 {
    position: absolute;
    background-color: red;
    width: 100px;
    height: 100px;
    right: 0px;
    bottom: 0px;
}

#abs3 {
    position: absolute;
    background-color: green;
    width: 100px;
    height: 100px;
    left: 50%;
    top: 50%;
    margin-left: -50px;
    margin-top: -50px;
}

#fix1 {
    position: fixed;
    border: solid orange;
    border-radius: 50%;
    width: 60px;
    height: 60px;
    bottom: 25%;
    right: 25%;
    display: none;
}

.col-1 {
    width: 8.33%;
}

.col-2 {
    width: 16.66%;
}

.col-3 {
    width: 25%;
}

.col-4 {
    width: 33%;
}

.col-5 {
    width: 41.66%;
}

.col-6 {
    width: 50%;
}

.col-7 {
    width: 58.33%;
}

.col-8 {
    width: 66.66%;
}

.col-9 {
    width: 75%;
}

.col-10 {
    width: 83.33%;
}

.col-11 {
    width: 91.66%;
}

.col-12 {
    width: 100%;
}

